Stoy-box overflow fixed using auto overflow

--- a/css/general.css
+++ b/css/general.css
@@ -185,7 +185,7 @@ h1 {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
-    overflow: scroll;
+    overflow: auto;
     min-height: 250px;
     max-height: 550px;
 }
